...
              fontSize: 24,

              fontWeight: "bold",
              marginTop: 10,
            }}
          >
            Driver
          </BaseText>
        </Pressable>

        <Pressable
          onPress={() => goToAccount("/mechanic/auth")}
          style={{
...
              fontSize: 24,

              fontWeight: "bold",
              marginTop: 10,
            }}
          >
            Mechanic
          </BaseText>
        </Pressable>
      </View>
    </BasePage>
  );
};
...
