...
  function confirmDelete() {
    Alert.alert(
      "Delete Booking Request",
      "Are you sure you want to delete this Booking Request",
      [
        {
          text: "Yes",
          onPress: () => _deleteOrder(),
        },
        {
          text: "No",
          style: "cancel",
        },
...
      <ListItem label="Mechanic Email" value={order.mechanics.email} />
      <ListItem
        label="Mechanic Phone Number"
        value={order.mechanics.phoneNumber}
      />
      <BaseButton
        label="Delete"
        onPress={confirmDelete}
        loading={deleting}
        styles={{
          width: "100%",
          backgroundColor: "transparent",
          borderWidth: 2,
...
      updateOrder(progress);
    }
  }

  async function markAsComplete() {
    setLoading2(true);
    const { error } = await updateOrderState(order.id, "Completed");
    setLoading2(false);
    if (error) {
      Toast.show({ title: "Error", textBody: error.message });
    } else {
      updateAsComplete();
    }
...
const orders = () => {
  const [orders, setOrders] = useState<Order[]>([]);
  const [loading, setLoading] = useState(false);

  const [orderToReview, setOrderToReview] = useState<Order | null>(null);

  const tabs = ["Pending", "Ongoing", "Completed", "Rejected"];
  const [activeTab, setActiveTab] = useState(0);

  const scrollViewRef = useRef(null);

  function goToTab(index: number) {
    //
...
