...
                  size={24}
                  color={AppTheme.primaryText.get()}
                />
              </View>
            </Link>
            <Spacer height={10} />
            <Link href="/driver/orders" testID="orders button">
              <View
                style={{
                  width: 50,
                  height: 50,
                  borderRadius: 50,
                  alignItems: "center",
...
                  size={24}
                  color={AppTheme.primaryText.get()}
                />
              </View>
            </Link>
            <Spacer height={10} />
            <Link href="/driver/chats" testID="chats button">
              <View
                style={{
                  width: 50,
                  height: 50,
                  borderRadius: 50,
                  alignItems: "center",
...
