...
            </>
          )}
          renderSend={(props) => (
            <Send {...props}>
              <View style={{ marginHorizontal: 10, marginBottom: -18 }}>
                <MaterialCommunityIcons
                  name="send"
                  size={18}
                  color={AppTheme.get().primaryText}
                />
              </View>
            </Send>
          )}
...
