import {
  View,
  Text,
  ScrollView,
  Dimensions,
  NativeSyntheticEvent,
  NativeScrollEvent,
  ActivityIndicator,
...
  order,
  close,
  updateOrder,
}: {
  order: Order;
  close: () => void;
  updateOrder: (id: string, state: "Ongoing" | "Rejected") => void;
}) {
  const bottomSheetRef = useRef<BottomSheet>(null);
  const snapPoints = useMemo(() => ["100%"], []);
  const [acceptLoading, setAcceptLoading] = useState(false);
  const [declineLoading, setDeclineLoading] = useState(false);

  async function updateState(state: "Ongoing" | "Rejected") {
    //
    if (state === "Ongoing") {
...
                loading={acceptLoading}
                styles={{ width: acceptLoading ? "100%" : "48.5%" }}
              />
            )}
            {acceptLoading == false && (
              <BaseButton
                label="Decline"
                onPress={() => updateState("Rejected")}
                loading={declineLoading}
                styles={{
                  backgroundColor: AppTheme.get().error,
                  width: declineLoading ? "100%" : "48.5%",
                }}
...
      updateOrder(progress);
    }
  }

  async function markAsComplete() {
    setLoading2(true);
    const { error } = await updateOrderState(order.id, "Completed");
    setLoading2(false);
    if (error) {
      Toast.show({ title: "Error", textBody: error.message });
    } else {
      updateAsComplete();
    }
...
            <ActivityIndicator size={"small"} color={"white"} />
          </View>
        )}
      </View>
      {order.progress == "100" && (
        <BaseButton
          label="Mark as Completed"
          onPress={markAsComplete}
          loading={loading2}
        />
      )}
    </Animatable.View>
  );
...
