...
                onDragEnd={(e) => setLocation(e.nativeEvent.coordinate)}
              />
            </MapView>
          </View>
          <Spacer height={10} />
          <BaseButton
            label="Done"
            onPress={() => onFinish(location)}
            styles={{ width: "100%" }}
          />
        </View>
      )}
    </BottomSheet>
...
